--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,71 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import '~bootstrap/dist/css/bootstrap.min.css';
+@import '~font-awesome/css/font-awesome.css';
+.nav-tabs,
+.nav-pills {
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+}
+
+.nav-tabs {
+    background-color: cadetblue;
+}
+
+.nav-pills {
+    background-color: white;
+    padding: .5rem;
+    -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+}
+
+.nav-tabs a.nav-link {
+    color: white;
+}
+
+.tab-content {
+    min-height: 950px;
+}
+
+html {
+    font-size: 0.6rem;
+}
+
+
+/* Extra small devices (portrait phones, less than 576px)
+No media query since this is the default in Bootstrap
+Small devices (landscape phones, 576px and up) */
+
+@media (min-width: 576px) {
+    html {
+        font-size: 0.6rem;
+    }
+}
+
+
+/* Medium devices (tablets, 768px and up) */
+
+@media (min-width: 768px) {
+    html {
+        font-size: 0.8rem;
+    }
+}
+
+
+/* Large devices (desktops, 992px and up) */
+
+@media (min-width: 992px) {
+    html {
+        font-size: 1rem;
+    }
+}
+
+
+/* Extra large devices (large desktops, 1200px and up) */
+
+@media (min-width: 1200px) {
+    html {
+        font-size: 1rem;
+    }
+}
