--- a/src/app/career-history/career-history.component.html
+++ b/src/app/career-history/career-history.component.html
@@ -4,7 +4,8 @@
         <ol class="list-history px-4" reversed>
             <li>
                 <article class="article-history-item">
-                    <h3>Senior Java/ Angular/ Full-stack/ Front-end/ Back-end Designer/ Developer | Freelance</h3>
+                    <h3>Senior Java/ Angular/ Full-stack/ Front-end/ Back-end Designer/ Developer</h3>
+                    <h6>Freelance</h6>
                     <p>
                         <span class="period">2017/04-Present;</span>
                         <span class="location">Philippines</span>
@@ -18,7 +19,8 @@
             </li>
             <li>
                 <article class="article-history-item">
-                    <h3>Advisory IT Specialist | IBM Solutions Delivery, Inc.</h3>
+                    <h3>Advisory IT Specialist</h3>
+                    <h6>IBM Solutions Delivery, Inc.</h6>
                     <p>
                         <span class="period">2011/08-2017/04;</span>
                         <span class="location">Philippines</span>
@@ -28,14 +30,15 @@
                         <li>Also worked as an instructor and facilitator for Java Bootcamp training for new hires and bench resources;</li>
                         <li>Became IBM Certified Cloud Application Developer V1</li>
                         <li>Served as proctor for the Cloud certification exams.</li>
-                        <li>Mentored fellow IBMers taking Clound certification</li>
+                        <li>Mentored fellow IBMers taking Cloud certification</li>
                         <li>Did Technical Interviews for Java, HTML5, and CSS3 candidates.</li>
                     </ul>
                 </article>
             </li>
             <li>
                 <article class="article-history-item">
-                    <h3>Senior Analyst/ Developer | RCG IT Manila</h3>
+                    <h3>Senior Analyst/ Developer</h3>
+                    <h6>RCG IT Manila</h6>
                     <p>
                         <span class="period">2009/09-2011/01;</span>
                         <span class="location">Philippines</span>
@@ -48,7 +51,8 @@
             </li>
             <li>
                 <article class="article-history-item">
-                    <h3>Software Consultant | International SQL Star Pt. Ltd.</h3>
+                    <h3>Software Consultant</h3>
+                    <h6>International SQL Star Pt. Ltd.</h6>
                     <p>
                         <span class="period">2009/01-2009/05;</span>
                         <span class="location">Singapore</span>
@@ -60,7 +64,8 @@
             </li>
             <li>
                 <article class="article-history-item">
-                    <h3>Design and Development Engineer | Barclays Global Investors</h3>
+                    <h3>Design and Development Engineer</h3>
+                    <h6>Barclays Global Investors</h6>
                     <p>
                         <span class="period">2008/01-2008/12;</span>
                         <span class="location">Singapore</span>
@@ -72,7 +77,8 @@
             </li>
             <li>
                 <article class="article-history-item">
-                    <h3>Senior Software Engineer | Lawson Philippine Solutions & Service Center, Inc.</h3>
+                    <h3>Senior Software Engineer</h3>
+                    <h6>Lawson Philippine Solutions & Service Center, Inc.</h6>
                     <p>
                         <span class="period">2006/03-2008/01;</span>
                         <span class="location">Philippines</span>
@@ -90,7 +96,8 @@
             </li>
             <li>
                 <article class="article-history-item">
-                    <h3>IT Consultant | ARCHON Consulting and System Services, Inc.</h3>
+                    <h3>IT Consultant</h3>
+                    <h6>ARCHON Consulting and System Services, Inc.</h6>
                     <p>
                         <span class="period">2005/11-2006/02;</span>
                         <span class="location">Philippines</span>
@@ -102,7 +109,8 @@
             </li>
             <li>
                 <article class="article-history-item">
-                    <h3>J2EE Developer | Aspire IT Solutions, Inc.</h3>
+                    <h3>J2EE Developer</h3>
+                    <h6>Aspire IT Solutions, Inc.</h6>
                     <p>
                         <span class="period">2005/03-2005/07;</span>
                         <span class="location">Philippines</span>
@@ -119,7 +127,8 @@
             </li>
             <li>
                 <article class="article-history-item">
-                    <h3>Senior Software Engineer | GXS Software Development, Inc.</h3>
+                    <h3>Senior Software Engineer</h3>
+                    <h6>GXS Software Development, Inc.</h6>
                     <p>
                         <span class="period">2001/11-2005/03;</span>
                         <span class="location">Philippines</span>
@@ -138,7 +147,8 @@
             </li>
             <li>
                 <article class="article-history-item">
-                    <h3>IT Consultant | RCG IT Manila</h3>
+                    <h3>IT Consultant</h3>
+                    <h6>RCG IT Manila</h6>
                     <p>
                         <span class="period">2001/05-2001/09;</span>
                         <span class="location">Philippines</span>
@@ -151,7 +161,8 @@
             </li>
             <li>
                 <article class="article-history-item">
-                    <h3>IT Consultant | E*Soft People</h3>
+                    <h3>IT Consultant</h3>
+                    <h6>E*Soft People</h6>
                     <p>
                         <span class="period">2000/07-2001/01;</span>
                         <span class="location">Philippines</span>
@@ -164,7 +175,8 @@
             </li>
             <li>
                 <article class="article-history-item">
-                    <h3>Software Engineer | Web-based Technologies, Inc.</h3>
+                    <h3>Software Engineer</h3>
+                    <h6>Web-based Technologies, Inc.</h6>
                     <p>
                         <span class="period">1998/11-2000/07;</span>
                         <span class="location">Philippines</span>
