--- a/src/app/arms/arms.component.html
+++ b/src/app/arms/arms.component.html
@@ -1,5 +1,5 @@
 <div class="timeline-heading">
-    <h4>ARMS (Accounts Reservation and Monitoring System)</h4>
+    <h4><abbr title="Accounts Reservation and Monitoring System">ARMS</abbr></h4>
     <h6>Web-based Technologies, Inc.</h6>
     <p><small class="text-muted">1998/11-2000/07; Philippines</small></p>
 </div>
