--- a/src/app/asist/asist.component.html
+++ b/src/app/asist/asist.component.html
@@ -1,5 +1,5 @@
 <div class="timeline-heading">
-    <h4>ASIST (Argos Supplier Information Service for Trading)</h4>
+    <h4><abbr title="Argos Supplier Information Service for Trading">ASIST</abbr></h4>
     <h6>GXS Software Development, Inc.</h6>
     <p><small class="text-muted">2001/11-2005/03; Philippines</small></p>
 </div>
