--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -5,6 +5,9 @@
                 <img class="align-self-center col" src="assets/me.jpg" alt="Tanny del Rosario photo">
             </div> -->
             <div class="col">
+                <a class="d-print-none float-right text-muted" href="#" onclick="window.print()"><i class="fas fa-2x fa-print"></i>
+                </a>
+
                 <h1 class="display-4 text-center">Tanny del Rosario</h1>
                 <ul class="lead list-unstyled text-center">
                     <li>Team/ Tech Lead</li>
