--- a/src/app/csp/csp.component.html
+++ b/src/app/csp/csp.component.html
@@ -1,5 +1,5 @@
 <div class="timeline-heading">
-    <h4>CSP (Customer Solutions Platform)</h4>
+    <h4><abbr title="Customer Solutions Platform">CSP</abbr></h4>
     <h6>ARCHON Consulting and System Services, Inc.</h6>
     <p><small class="text-muted">2005/11-2006/02; Philippines</small></p>
 </div>
