--- a/src/app/dcl/dcl.component.html
+++ b/src/app/dcl/dcl.component.html
@@ -1,5 +1,5 @@
 <div class="timeline-heading">
-    <h4>DCL (Disney Cruise Lines)</h4>
+    <h4><abbr title="Disney Cruise Lines">DCL</abbr></h4>
     <h6>RCG IT Manila</h6>
     <p><small class="text-muted">2009/09-2009/11; USA</small></p>
 </div>
