--- a/src/app/dvcmob/dvcmob.component.html
+++ b/src/app/dvcmob/dvcmob.component.html
@@ -1,5 +1,5 @@
 <div class="timeline-heading">
-    <h4>DVCMOB (Disney Vacation Club Members Online Booking)</h4>
+    <h4><abbr title="Disney Vacation Club Members Online Booking">DVCMOB</abbr></h4>
     <h6>RCG IT Manila</h6>
     <p><small class="text-muted">2009/11-2010/10; Philippines, USA</small></p>
 </div>
