--- a/src/app/gesmp/gesmp.component.html
+++ b/src/app/gesmp/gesmp.component.html
@@ -1,5 +1,5 @@
 <div class="timeline-heading">
-    <h4>GESMP (GE Supplier Marketplace)</h4>
+    <h4><abbr title="GE Supplier Marketplace">GESMP</abbr></h4>
     <h6>GXS Software Development, Inc.</h6>
     <p><small class="text-muted">2001/11-2005/03; Philippines</small></p>
 </div>
