--- a/src/app/glaim/glaim.component.html
+++ b/src/app/glaim/glaim.component.html
@@ -1,12 +1,12 @@
 <div class="timeline-heading">
-    <h4>GLAIM (Global Logistics Americas Information Management)</h4>
+    <h4><abbr title="Global Logistics Americas Information Management">GLAIM</abbr></h4>
     <h6>IBM Solutions Delivery, Inc.</h6>
     <p><small class="text-muted">2011/08-2013/06; Philippines</small></p>
 </div>
 <div class="timeline-body">
     <dl>
         <dt>Client:</dt>
-        <dd>Sun Life Financial</dd>
+        <dd>IBM US</dd>
         <dt>Description:</dt>
         <p>Maintenance of GLAIM applications.</p>
         <dt>Contribution:</dt>
