--- a/src/app/mscm-3-4/mscm-3-4.component.html
+++ b/src/app/mscm-3-4/mscm-3-4.component.html
@@ -1,5 +1,5 @@
 <div class="timeline-heading">
-    <h4>MSCM 3, MSCM 4 (Mobile Supply Chain Management)</h4>
+    <h4><abbr title="Mobile Supply Chain Management">MSCM</abbr> 3, MSCM 4</h4>
     <h6>Lawson Philippine Solutions & Service Center, Inc.</h6>
     <p><small class="text-muted">2006/03-2008/01; Philippines, USA</small></p>
 </div>
