--- a/src/app/my-resume-website/my-resume-website.component.html
+++ b/src/app/my-resume-website/my-resume-website.component.html
@@ -1,7 +1,7 @@
 <div class="timeline-heading">
     <h4>
         <a href="https://tanny-del-rosario-resume.firebaseapp.com/" target="_blank">My Resume Website</a>
-        <a href="https://tanny-del-rosario-resume.firebaseapp.com/" target="_blank" class="btn btn-primary btn-sm">
+        <a href="https://tanny-del-rosario-resume.firebaseapp.com/" target="_blank" class="btn btn-primary btn-sm d-print-none">
             <i class="fas fa-external-link-alt"></i> Open Site
         </a>
     </h4>
