--- a/src/app/project-management-portal/project-management-portal.component.html
+++ b/src/app/project-management-portal/project-management-portal.component.html
@@ -1,7 +1,7 @@
 <div class="timeline-heading">
     <h4>
         <a href="https://project-management-portal.herokuapp.com/" target="_blank">Project Management Portal</a>
-        <a href="https://project-management-portal.herokuapp.com/" target="_blank" class="btn btn-primary btn-sm">
+        <a href="https://project-management-portal.herokuapp.com/" target="_blank" class="btn btn-primary btn-sm d-print-none">
             <i class="fas fa-external-link-alt"></i> Open App
         </a>
     </h4>
