--- a/src/app/walgreens-ais/walgreens-ais.component.html
+++ b/src/app/walgreens-ais/walgreens-ais.component.html
@@ -1,5 +1,5 @@
 <div class="timeline-heading">
-    <h4>Walgreens AIS (Automated Item System)</h4>
+    <h4>Walgreens <abbr title="Automated Item System">AIS</abbr></h4>
     <h6>RCG IT Manila</h6>
     <p><small class="text-muted">2010/10-2011/01; Philippines</small></p>
 </div>
