--- a/src/app/employee-data-management-system/employee-data-management-system.component.html
+++ b/src/app/employee-data-management-system/employee-data-management-system.component.html
@@ -1,7 +1,7 @@
 <div class="timeline-heading">
     <h4>
         <a href="https://employee-data-management-e025e.firebaseapp.com/" target="_blank">Employee Data Management System</a>
-        <a href="https://employee-data-management-e025e.firebaseapp.com/" target="_blank" class="btn btn-primary btn-sm">
+        <a href="https://employee-data-management-e025e.firebaseapp.com/" target="_blank" class="btn btn-primary btn-sm d-print-none">
             <i class="fas fa-external-link-alt"></i> Open App
         </a>
     </h4>
