--- a/src/app/mscm-9/mscm-9.component.html
+++ b/src/app/mscm-9/mscm-9.component.html
@@ -1,5 +1,5 @@
 <div class="timeline-heading">
-    <h4>MSCM 9 (Mobile Supply Chain Management)</h4>
+    <h4><abbr title="Mobile Supply Chain Management">MSCM</abbr> 9</h4>
     <h6>Lawson Philippine Solutions & Service Center, Inc.</h6>
     <p><small class="text-muted">2006/03-2008/01; Philippines, USA</small></p>
 </div>
