--- a/src/app/web-dm/web-dm.component.html
+++ b/src/app/web-dm/web-dm.component.html
@@ -1,5 +1,5 @@
 <div class="timeline-heading">
-    <h4>WebDM (Web Design Manuals)</h4>
+    <h4><abbr title="Web Design Manuals">WebDM</abbr></h4>
     <h6>IBM Solutions Delivery, Inc.</h6>
     <p><small class="text-muted">2013/09-2013/12; Philippines</small></p>
 </div>
