--- a/src/app/banner/banner.component.css
+++ b/src/app/banner/banner.component.css
@@ -1,3 +1,10 @@
 .jumbotron {
     margin-bottom: unset;
 }
+
+a.d-none {
+    position: absolute;
+    top: 30px;
+    right: 40px;
+    z-index: 800;
+}
