--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,25 +1,19 @@
-<div id="top" class="jumbotron jumbotron-fluid card mt-2">
-    <div class="container">
-        <div class="row">
-            <!-- <div class="col-3">
-                <img class="align-self-center col" src="assets/me.jpg" alt="Tanny del Rosario photo">
-            </div> -->
-            <div class="col">
-                <a class="d-print-none float-right text-muted" href="#" onclick="window.print()"><i class="fas fa-2x fa-print"></i>
-                </a>
-
-                <h1 class="display-4 text-center">Tanny del Rosario</h1>
-                <ul class="lead list-unstyled text-center">
-                    <li>Team/ Tech Lead</li>
-                    <li>Architect/ Engineer/ Designer</li>
-                    <li>Full-stack Developer</li>
-                    <li>Java Developer (Java SE, Java EE, Spring)</li>
-                    <li>Cloud Application Developer (IBM Cloud (Bluemix), Google Firebase)</li>
-                    <li>Front-end Developer (HTML5, CSS3, Javascript, Angular)</li>
-                    <li>Back-end Developer (Java EE, Spring, NodeJs)</li>
-                    <li>MEAN Developer (MongoDb, ExpressJs, Angular, NodeJs)</li>
-                </ul>
-            </div>
-        </div>
+<a class="d-none d-sm-inline d-print-none text-muted" href="#" onclick="window.print()"><i class="fas fa-2x fa-print"></i></a>
+<div class="jumbotron jumbotron-fluid card mt-2 pb-4">
+    <h1 class="display-4 text-center">Tanny del Rosario</h1>
+    <ul class=" list-unstyled text-center">
+        <li>Team/ Tech Lead</li>
+        <li class="lead">Architect/ Engineer/ Designer/ Developer</li>
+        <li>Fullstack Developer</li>
+        <li>Java Developer (Java SE, Java EE, Spring)</li>
+        <li>Cloud Application Developer (IBM Cloud (Bluemix), Google Firebase)</li>
+        <li>Frontend Developer (HTML5, CSS3, Javascript, Angular)</li>
+        <li>Backend Developer (Java EE, Spring, NodeJs)</li>
+        <li>MEAN Developer (MongoDb, ExpressJs, Angular, NodeJs)</li>
+    </ul>
+    <div class="btn-group align-self-end px-4">
+        <a class="btn btn-light" href="tel:+639159448544" role="button"><i class="fas fa-mobile"></i> Mobile</a>
+        <a class="btn btn-light" href="mailto:delrosariotanny@gmail.com" role="button"><i class="far fa-envelope"></i> eMail</a>
+        <a class="btn btn-light" href="https://www.facebook.com/messages/t/tanny.delrosario/" target="_blank" role="button"><i class="fab fa-facebook-messenger"></i> Message</a>
     </div>
 </div>
