--- a/src/app/career-history/career-history.component.html
+++ b/src/app/career-history/career-history.component.html
@@ -4,7 +4,7 @@
         <ol class="list-history px-4" reversed>
             <li>
                 <article class="article-history-item">
-                    <h3>Senior Java/ Angular/ Full-stack/ Front-end/ Back-end Designer/ Developer</h3>
+                    <h3>Senior Java/ Angular/ Fullstack/ Frontend/ Backend Achitect/ Engineer/ Designer/ Developer</h3>
                     <h6>Freelance</h6>
                     <p>
                         <span class="period">2017/04-Present;</span>
