--- a/src/app/pills/pills-firebase/pills-firebase.component.css
+++ b/src/app/pills/pills-firebase/pills-firebase.component.css
@@ -1,10 +1,14 @@
-span.btn {
-    color: black;
-    background-color: white;
-    border-color: orange;
-    border-radius: 20px;
+span.badge img {
+    height: 26px;
 }
 
-span.btn img {
-    height: 26px;
+span.badge {
+    background-color: white;
+    border-color: orange;
+    border-style: solid;
+    font-size: unset;
+    line-height: unset;
+    font-weight: unset;
+    -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
 }
