--- a/src/app/pills/pills-html5/pills-html5.component.html
+++ b/src/app/pills/pills-html5/pills-html5.component.html
@@ -1,1 +1,1 @@
-<span class="btn btn-primary disabled"><i class="fab fa-html5"></i> HTML5</span>
+<span class="badge badge-pill badge-dark"><i class="fab fa-html5"></i> HTML5</span>
