--- a/src/app/pills/pills-node-js/pills-node-js.component.html
+++ b/src/app/pills/pills-node-js/pills-node-js.component.html
@@ -1,1 +1,1 @@
-<span class="btn btn-primary disabled"><i class="fab fa-node-js"></i> NodeJs</span>
+<span class="badge badge-pill badge-light"><i class="fab fa-node-js"></i> NodeJs</span>
