--- a/src/app/pills/pills-angular/pills-angular.component.html
+++ b/src/app/pills/pills-angular/pills-angular.component.html
@@ -1,1 +1,1 @@
-<span class="btn btn-primary disabled"><i class="fab fa-angular"></i> Angular</span>
+<span class="badge badge-pill badge-dark"><i class="fab fa-angular"></i> Angular</span>
