--- a/src/app/pills/pills-bootstrap/pills-bootstrap.component.css
+++ b/src/app/pills/pills-bootstrap/pills-bootstrap.component.css
@@ -1,6 +1,9 @@
-span.btn {
-    color: white;
+span.badge {
     background-color: rebeccapurple;
     border-color: rebeccapurple;
-    border-radius: 20px;
+    font-size: unset;
+    line-height: unset;
+    font-weight: unset;
+    -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
 }
