--- a/src/app/pills/pills-bootstrap/pills-bootstrap.component.html
+++ b/src/app/pills/pills-bootstrap/pills-bootstrap.component.html
@@ -1,1 +1,1 @@
-<span class="btn btn-primary disabled"><i class="fas fa-bold"></i> Bootstrap</span>
+<span class="badge badge-pill badge-dark"><i class="fas fa-bold"></i> Bootstrap</span>
