--- a/src/app/pills/pills-css3/pills-css3.component.html
+++ b/src/app/pills/pills-css3/pills-css3.component.html
@@ -1,1 +1,1 @@
-<span class="btn btn-primary disabled"><i class="fab fa-css3"></i> CSS3</span>
+<span class="badge badge-pill badge-light"><i class="fab fa-css3"></i> CSS3</span>
