--- a/src/app/pills/pills-firebase/pills-firebase.component.html
+++ b/src/app/pills/pills-firebase/pills-firebase.component.html
@@ -1,1 +1,1 @@
-<span class="btn btn-primary disabled py-1"><img src="assets/googlefirebase.svg"> Firebase</span>
+<span class="badge badge-pill badge-light py-0"><img src="assets/googlefirebase.svg"> Firebase</span>
