--- a/src/app/pills/pills-html/pills-html.component.css
+++ b/src/app/pills/pills-html/pills-html.component.css
@@ -1,5 +1,9 @@
-span.btn {
+span.badge {
     background-color: orangered;
     border-color: orangered;
-    border-radius: 20px;
+    font-size: unset;
+    line-height: unset;
+    font-weight: unset;
+    -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
 }
