--- a/src/app/pills/pills-java/pills-java.component.html
+++ b/src/app/pills/pills-java/pills-java.component.html
@@ -1,1 +1,1 @@
-<span class="btn btn-primary disabled"><i class="fas fa-coffee"></i> Java {{category}}</span>
+<span class="badge badge-pill badge-dark"><i class="fas fa-coffee"></i> Java {{category}}</span>
