--- a/src/app/pills/pills-jquery/pills-jquery.component.css
+++ b/src/app/pills/pills-jquery/pills-jquery.component.css
@@ -1,6 +1,13 @@
-span.btn {
-    color: black;
+span.badge img {
+    height: 20px;
+}
+
+span.badge {
     background-color: lightskyblue;
     border-color: lightskyblue;
-    border-radius: 20px;
+    font-size: unset;
+    line-height: unset;
+    font-weight: unset;
+    -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
 }
