--- a/src/app/pills/pills-jquery/pills-jquery.component.html
+++ b/src/app/pills/pills-jquery/pills-jquery.component.html
@@ -1,1 +1,1 @@
-<span class="btn btn-primary disabled">jQuery</span>
+<span class="badge badge-pill badge-light"><img src="assets/jquery.svg">jQuery</span>
