--- a/src/app/pills/pills-php/pills-php.component.html
+++ b/src/app/pills/pills-php/pills-php.component.html
@@ -1,1 +1,1 @@
-<span class="btn btn-primary disabled"><i class="fab fa-php"></i> PHP</span>
+<span class="badge badge-pill badge-light"><i class="fab fa-php"></i> PHP</span>
