--- a/src/app/pills/pills-spring/pills-spring.component.html
+++ b/src/app/pills/pills-spring/pills-spring.component.html
@@ -1,1 +1,1 @@
-<span class="btn btn-primary disabled"><i class="fas fa-leaf"></i> Spring {{category}}</span>
+<span class="badge badge-pill badge-dark"><i class="fas fa-leaf"></i> Spring {{category}}</span>
