Make image icons in pills responsive

--- a/src/app/pills/pills-jquery/pills-jquery.component.css
+++ b/src/app/pills/pills-jquery/pills-jquery.component.css
@@ -1,5 +1,5 @@
 span.badge img {
-    height: 20px;
+    height: 12px;
 }
 
 span.badge {
@@ -10,4 +10,42 @@ span.badge {
     font-weight: unset;
     -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
     box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+}
+
+
+/* Extra small devices (portrait phones, less than 576px)
+No media query since this is the default in Bootstrap
+Small devices (landscape phones, 576px and up) */
+
+@media (min-width: 576px) {
+    span.badge img {
+        height: 12px;
+    }
+}
+
+
+/* Medium devices (tablets, 768px and up) */
+
+@media (min-width: 768px) {
+    span.badge img {
+        height: 18px;
+    }
+}
+
+
+/* Large devices (desktops, 992px and up) */
+
+@media (min-width: 992px) {
+    span.badge img {
+        height: 20px;
+    }
+}
+
+
+/* Extra large devices (large desktops, 1200px and up) */
+
+@media (min-width: 1200px) {
+    span.badge img {
+        height: 20px;
+    }
 }
