Change color of nodejs pill

--- a/src/app/pills/pills-node-js/pills-node-js.component.css
+++ b/src/app/pills/pills-node-js/pills-node-js.component.css
@@ -1,6 +1,6 @@
 span.badge {
-    background-color: yellow;
-    border-color: yellow;
+    background-color: yellowgreen;
+    border-color: yellowgreen;
     font-size: unset;
     line-height: unset;
     font-weight: unset;
