--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,15 +1,16 @@
 <a class="d-none d-sm-inline d-print-none text-muted" href="#" onclick="window.print()"><i class="fas fa-2x fa-print"></i></a>
 <div class="jumbotron jumbotron-fluid card mt-2 pb-4">
     <h1 class="display-4 text-center">Tanny del Rosario</h1>
+    <h6 class="lead text-center">Architect/ Engineer/ Designer/ Developer</h6>
     <ul class=" list-unstyled text-center">
         <li>Team/ Tech Lead</li>
-        <li class="lead">Architect/ Engineer/ Designer/ Developer</li>
         <li>Fullstack Developer</li>
         <li>Java Developer (Java SE, Java EE, Spring)</li>
         <li>Cloud Application Developer (IBM Cloud (Bluemix), Google Firebase)</li>
         <li>Frontend Developer (HTML5, CSS3, Javascript, Angular)</li>
         <li>Backend Developer (Java EE, Spring, NodeJs)</li>
         <li>MEAN Developer (MongoDb, ExpressJs, Angular, NodeJs)</li>
+        <li class="lead mt-2 badge-light text-capitalize font-italic">20 years of experience!</li>
     </ul>
     <div class="btn-group align-self-end px-4">
         <a class="btn btn-light" href="tel:+639159448544" role="button"><i class="fas fa-mobile"></i> Mobile</a>
