--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -62,7 +62,7 @@
                 </div>
             </ng-template>
             <li><button class="btn btn-link p-0" (click)="open(scjp1)">Sun Certified Java Programmer;</button></li>
-            <li><strong>19+ years of work experience in enterprise/ web application design and development using HTML, CSS, Javascript, Java and other technologies;</strong></li>
+            <li><strong>20 years of work experience in enterprise/ web application design and development using HTML, CSS, Javascript, Java and other technologies;</strong></li>
             <li>4 years of Lead role experience;</li>
             <li>Experienced requirements gathering, analysis and design, coding, testing and debugging, and support;</li>
             <li>Software Architecting/ Engineering;</li>
