--- a/src/app/my-resume-website-v2/my-resume-website-v2.component.html
+++ b/src/app/my-resume-website-v2/my-resume-website-v2.component.html
@@ -6,12 +6,12 @@
         </a>
     </h4>
     <h6>Freelance</h6>
-    <p><small class="text-muted">2018/03-Present; Philippines</small></p>
+    <p><small class="text-muted">2018/03/18-2018/03/26; Philippines</small></p>
 </div>
 <div class="timeline-body">
     <dl>
         <dt>Description:</dt>
-        <dd>A reponsive website using Angular and Bootsrap</dd>
+        <dd>A reponsive website with printer-friendly styling version. Using Angular and Bootsrap</dd>
         <dt>Contribution:</dt>
         <dd>
             <ul class="list-contribution">
