--- a/src/app/ibm-cloud-app-dev-training/ibm-cloud-app-dev-training.component.html
+++ b/src/app/ibm-cloud-app-dev-training/ibm-cloud-app-dev-training.component.html
@@ -1,18 +1,22 @@
 <div class="timeline-heading">
-    <h4>IBM Cloud Application Development Training</h4>
+    <h4>IBM Cloud/ Bluemix Application Developer Training and Certification</h4>
     <h6>IBM Solutions Delivery, Inc.</h6>
     <p><small class="text-muted">2016/10-2016/10; Philippines</small></p>
 </div>
 <div class="timeline-body">
     <dl>
         <dt>Description:</dt>
-        <dd>IBM Bluemix training</dd>
+        <dd>IBM Cloud/ Bluemix Application Developer Training and Certification</dd>
         <dt>Contribution:</dt>
         <dd>
             <ul class="list-contribution">
                 <li>Got certified as IBM Cloud Application Developer V1</li>
-                <li>Became proctor and mentor for the certification of fellow IBMers.</li>
+                <li>Proctor and mentor for the certification of fellow IBMers.</li>
             </ul>
+        </dd>
+        <dt>Cloud:</dt>
+        <dd>
+            <app-pills-ibm-cloud></app-pills-ibm-cloud>
         </dd>
         <dt>Client-side:</dt>
         <dd>
@@ -27,8 +31,6 @@
         <dd>
             <app-pills-node-js></app-pills-node-js>
         </dd>
-        <dt>Web/ Application Servers:</dt>
-        <dd>IBM Bluemix</dd>
         <dt>Databases:</dt>
         <dd>Cloudant</dd>
         <dt>Development Tools:</dt>
