--- a/src/app/project-management-portal/project-management-portal.component.html
+++ b/src/app/project-management-portal/project-management-portal.component.html
@@ -31,6 +31,11 @@
             <app-pills-spring category="Boot"></app-pills-spring>
             <app-pills-java></app-pills-java>
         </dd>
+        <dt>Web/ Application Servers:</dt>
+        <dd>
+            Hosted in
+            <app-pills-heroku></app-pills-heroku>
+        </dd>
         <dt>Databases:</dt>
         <dd>MS SQL Server/ Azure SQL Server</dd>
         <dt>Development Tools:</dt>
