--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -3,8 +3,12 @@
     <div class="card-body">
         <dl class="list-skill striped-list">
             <dt>Cloud:</dt>
-            <dd>IBM Cloud/Bluemix, Google Firebase; Heroku</dd>
-            <dt>Client-side:</dt>
+            <dd>
+                <app-pills-ibm-cloud></app-pills-ibm-cloud>
+                <app-pills-firebase></app-pills-firebase>
+                <app-pills-heroku></app-pills-heroku>
+            </dd>
+            <dt>Frontend/ Client-side:</dt>
             <dd>
                 <app-pills-html5></app-pills-html5>
                 <app-pills-css3></app-pills-css3>
@@ -13,7 +17,7 @@
                 <app-pills-jquery></app-pills-jquery>
                 <app-pills-bootstrap></app-pills-bootstrap>
             </dd>
-            <dt>Server-side:</dt>
+            <dt>Backend/ Server-side:</dt>
             <dd>
                 <app-pills-java category="EE"></app-pills-java> (Portal/ Portlet, JSF, JSP, Servlet, REST, JPA),
                 <app-pills-spring></app-pills-spring> (Spring MVC, Spring Boot, Spring Data JPA),
@@ -21,7 +25,7 @@
                 <app-pills-node-js></app-pills-node-js>
             </dd>
             <dt>Database:</dt>
-            <dd>Oracle, Sybase, Ms SQL Server/ Azure Ms SQL Server, DB2, MySQL, MongoDb, and Cloudant</dd>
+            <dd>Oracle, Sybase, Ms SQL Server/ Azure Ms SQL Server, DB2, MySQL, Google Firebase, MongoDb, and Cloudant</dd>
             <dt>Creative:</dt>
             <dd>Adobe Photoshop, Illustrator, After Effects</dd>
             <dt>Others:</dt>
