--- a/src/app/up-skilling-training/up-skilling-training.component.html
+++ b/src/app/up-skilling-training/up-skilling-training.component.html
@@ -14,6 +14,10 @@
                 <li>Served as mentor and proctor for the certification of fellow IBMers.</li>
             </ul>
         </dd>
+        <dt>Cloud:</dt>
+        <dd>
+            <app-pills-ibm-cloud></app-pills-ibm-cloud>
+        </dd>
         <dt>Client-side:</dt>
         <dd>
             <app-pills-html5></app-pills-html5>
@@ -28,8 +32,6 @@
             <app-pills-node-js></app-pills-node-js>
             <app-pills-php></app-pills-php>
         </dd>
-        <dt>Web/ Application Servers:</dt>
-        <dd>IBM Bluemix</dd>
         <dt>Databases:</dt>
         <dd>MongoDb, Cloudant</dd>
         <dt>Development Tools:</dt>
