--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,25 +2,30 @@
     <app-banner></app-banner>
     <div #tabset class="d-print-none">
         <ngb-tabset type="pills" justify="justified" (tabChange)="onTabChange()">
-            <ngb-tab title="About">
+            <!-- <ngb-tab title="About"> -->
+            <ngb-tab>
+                <ng-template ngbTabTitle><i class="far fa-user"></i> About</ng-template>
                 <ng-template ngbTabContent>
                     <app-profile></app-profile>
                     <app-skills></app-skills>
                     <app-courses></app-courses>
                 </ng-template>
             </ngb-tab>
-            <ngb-tab title="Career History">
+            <ngb-tab>
+                <ng-template ngbTabTitle><i class="fab fa-black-tie"></i> Career History</ng-template>
                 <ng-template ngbTabContent>
                     <app-career-history></app-career-history>
                 </ng-template>
             </ngb-tab>
-            <ngb-tab title="Projects">
+            <ngb-tab>
+                <ng-template ngbTabTitle><i class="far fa-calendar-check"></i> Projects</ng-template>
                 <ng-template ngbTabContent>
                     <app-projects-md class="d-md-none"></app-projects-md>
                     <app-projects class="d-none d-md-block"></app-projects>
                 </ng-template>
             </ngb-tab>
-            <ngb-tab title="Contact and Basic Info">
+            <ngb-tab>
+                <ng-template ngbTabTitle><i class="far fa-address-card"></i> Contact and Basic Info</ng-template>
                 <ng-template ngbTabContent>
                     <app-contact></app-contact>
                 </ng-template>
