--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -7,6 +7,7 @@
                 <app-pills-ibm-cloud></app-pills-ibm-cloud>
                 <app-pills-firebase></app-pills-firebase>
                 <app-pills-heroku></app-pills-heroku>
+                <app-pills-azure></app-pills-azure>
             </dd>
             <dt>Frontend/ Client-side:</dt>
             <dd>
