--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -10,6 +10,27 @@
                     <!-- <ol reversed> -->
                     <ul class="timeline">
                         <li class="timeline-inverted">
+                            <span class="anchor" id="39"></span>
+                            <div class="timeline-badge">39</div>
+                            <div class="timeline-panel">
+                                <app-invoice-system></app-invoice-system>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <span class="anchor" id="38"></span>
+                            <div class="timeline-badge">38</div>
+                            <div class="timeline-panel">
+                                <app-sesame-menu></app-sesame-menu>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <span class="anchor" id="37"></span>
+                            <div class="timeline-badge">37</div>
+                            <div class="timeline-panel">
+                                <app-pos></app-pos>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
                             <span class="anchor" id="36"></span>
                             <div class="timeline-badge">36</div>
                             <div class="timeline-panel">
@@ -267,6 +288,9 @@
             </div>
             <div class="col-4">
                 <ol class="small" reversed>
+                    <li><a class="nav-link" href="#39">Invoice Billing System</a></li>
+                    <li><a class="nav-link" href="#38">Sesame.Menu</a></li>
+                    <li><a class="nav-link" href="#37">POS</a></li>
                     <li><a class="nav-link" href="#36">My Resume Website v2</a></li>
                     <li><a class="nav-link" href="#35">Project Management Portal</a></li>
                     <li><a class="nav-link" href="#34">Freelance Projects</a></li>
