Update career history

--- a/src/app/career-history/career-history.component.html
+++ b/src/app/career-history/career-history.component.html
@@ -4,15 +4,29 @@
         <ol class="list-history px-4" reversed>
             <li>
                 <article class="article-history-item">
-                    <h3>Senior Java/ Angular/ Fullstack/ Frontend/ Backend Achitect/ Engineer/ Designer/ Developer</h3>
-                    <h6>Freelance</h6>
+                    <h3>Software Engineer/ Fullstack Java Developer</h3>
+                    <h6>Confidential</h6>
                     <p>
-                        <span class="period">2017/04-Present;</span>
+                        <span class="period">2018/05-Present;</span>
                         <span class="location">Philippines</span>
                     </p>
                     <ul class="list-history-detail">
-                        <li>Currently doing freelance work for facebook pages as graphics designer and admin for advertisements;</li>
-                        <li>Also doing freelance work from Freelancer.com and other freelance websites;</li>
+                        <li>Doing fullstack development using Angular and jQuery for front-end; using Spring for back-end;</li>
+                        <li>Interviewing Fullstack Developer candidates;</li>
+                    </ul>
+                </article>
+            </li>
+            <li>
+                <article class="article-history-item">
+                    <h3>Senior Java/ Angular/ Fullstack/ Frontend/ Backend Achitect/ Engineer/ Designer/ Developer</h3>
+                    <h6>Freelance</h6>
+                    <p>
+                        <span class="period">2017/04-2018/05;</span>
+                        <span class="location">Philippines</span>
+                    </p>
+                    <ul class="list-history-detail">
+                        <li>Did freelance work from Freelancer.com and other freelance websites as a developer;</li>
+                        <li>Also did freelance work for facebook pages as graphics designer and admin for advertisements;</li>
                         <li>Continuously training myself to develop web applications with the latest in technology.</li>
                     </ul>
                 </article>
@@ -92,7 +106,7 @@
             <li>
                 <article class="article-history-item">
                     <h3>Senior Software Engineer</h3>
-                    <h6>Lawson Philippine Solutions & Service Center, Inc.</h6>
+                    <h6>Lawson Philippine Solutions &amp; Service Center, Inc.</h6>
                     <p>
                         <span class="period">2006/03-2008/01;</span>
                         <span class="location">Philippines</span>
